k8s/base/microservices-teams/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-teams-deployment
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teams
      tier: backend
  template:
    metadata:
      labels:
        app: teams
        tier: backend
    spec:
      containers:
        - name: microservices-teams
          image: azizzakiryarov/microservices-teams:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
              protocol: TCP
