k8s/base/microservices-teams/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-teams
spec:
  type: ClusterIP
  selector:
    app: teams
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
